--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,32 +4,127 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     android:orientation="vertical"
+    android:paddingLeft="16dp"
+    android:paddingTop="10dp"
+    android:paddingRight="16dp"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/xeditText"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:orientation="horizontal"
+        android:paddingLeft="13dp"
+        android:paddingRight="16dp">
+
+        <ImageView
+            android:id="@+id/backButton"
+            android:layout_width="35dp"
+            android:layout_height="69dp"
+            android:layout_gravity="left"
+            android:layout_marginRight="85dp"
+            android:layout_marginBottom="50dp"
+            android:background="@null"
+            android:src="@drawable/back" />
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="70dp"
+            android:layout_gravity="right"
+            android:layout_marginRight="85dp"
+            android:layout_marginBottom="50dp"
+            android:background="@null"
+            android:src="@drawable/kofic" />
+
+        <ImageView
+            android:layout_width="35dp"
+            android:layout_height="69dp"
+            android:layout_gravity="right"
+            android:layout_marginBottom="50dp"
+            android:background="@null"
+            android:src="@drawable/search" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="https://www.kobis.or.kr/kobisopenapi/webservice/rest/boxoffice/searchDailyBoxOfficeList.json?key=b151453efefc24a3ed2fb130d19c4299&#38;targetDt=20210101"
-        android:hint="사이트 주소 입력" />
+        android:orientation="vertical"
+        android:paddingLeft="13dp"
+        android:paddingTop="10dp"
+        android:paddingRight="16dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="∙ KOBIS 일별 박스오피스 TOP 10"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:textSize="21dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:orientation="horizontal"
+        android:paddingTop="10dp">
+
+        <EditText
+            android:id="@+id/xeditText"
+            android:layout_width="260dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="15dp"
+            android:hint="사이트 주소 입력"
+            android:text="https://www.kobis.or.kr/kobisopenapi/webservice/rest/boxoffice/searchDailyBoxOfficeList.json?key=ad9938cada5685b4613c747d4cb31e01&#38;targetDt=20211205" />
+
+        <Button
+            android:id="@+id/xbutton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/select_button2"
+            android:text="조회하기"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"/>
+
+    </LinearLayout>
 
     <Button
-        android:id="@+id/xbutton"
+        android:id="@+id/dateButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="요청하기"/>
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/select_button2"
+        android:text="일별 박스오피스 조회 날짜 선택"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/back_drawable"/>
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textStyle="bold"/>
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textStyle="bold"/>
 
 </LinearLayout>
