--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -76,7 +76,7 @@
                     android:layout_width="170dp"
                     android:layout_height="wrap_content"
                     android:layout_alignBaseline="@id/usernameLabel"
-                    android:hint="Id" />
+                    android:hint="Id"/>
 
             </LinearLayout>
 
@@ -116,6 +116,23 @@
             android:layout_marginRight="4dp"
             android:text="로그인"
             android:textStyle="bold" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="110dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="110dp"
+                android:text="아이디 저장"
+                android:textColor="#000000"
+                android:textSize="16dp"/>
+        </LinearLayout>
+
 
         <Button
             android:layout_width="match_parent"
